Fix spacing of login on mobile

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -24,7 +24,12 @@
 
 .items-heading__action {
   width: $code-width;
-  margin-right: $margin / 2;
+  margin-top: $margin / 2;
+
+  @include media-min(sm) {
+    margin-right: $margin / 2;
+    margin-top: 0;
+  }
 
   @include media-min(md) {
     margin-right: 0;
